z-index fix
z-index fix

--- a/src/styles/sections/_cart-popup-767.scss
+++ b/src/styles/sections/_cart-popup-767.scss
@@ -5,7 +5,7 @@
   background: $white;
   height: 100vh;
   width: 100%;
-  z-index: 5;
+  z-index: 100000;
   overflow: auto;
   box-shadow: 7px 4px 10px rgba(14, 16, 31, 0.1);
   transition: all .3s ease;
