--- a/src/styles/sections/_header-top-menu-767.scss
+++ b/src/styles/sections/_header-top-menu-767.scss
@@ -167,7 +167,7 @@
     }
     &.show {
       left: 0;
-      z-index: 4;
+      z-index: 100000;
     }
     &--link {
       &.cart-item {
